--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,25 +1,9 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "es2016",
-      "dom"
-    ],
     "outDir": "../out-tsc/app",
-    "target": "es5",
     "module": "es2015",
-    "baseUrl": "",
-    "noEmitHelpers": false,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
-    "noUnusedLocal": true,
-    "noUnusedParameters": true,
-    "strictNullChecks": true
+    "baseUrl": ""
   },
   "exclude": [
     "test.ts",
