--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -1,32 +1,16 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "dom",
-      "es2016"
-    ],
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "target": "es5",
     "baseUrl": "",
-    "types": [
-      "jasmine",
-      "node"
-    ]
   },
   "files": [
     "test.ts"
   ],
   "include": [
-    "**/*.spec.ts"
-  ],
-  "noEmitHelpers": false,
-  "noImplicitAny": false,
-  "noImplicitReturns": false,
-  "noImplicitThis": false,
-  "strictNullChecks": false
+    "**/*.spec.ts",
+    "**/*.d.ts"
+  ]
 }
