--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/core": "^2.4.9",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
     "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "^2.4.9",
-    "@angular/http": "^2.4.9",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/router": "^3.4.9",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "angularfire2": "2.0.0-beta.8",
     "core-js": "^2.4.1",
-    "firebase": "^3.7.1",
+    "firebase": "^3.7.3",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
     "rxjs": "^5.2.0",
     "ts-helpers": "^1.1.2",
     "web-animations-js": "^2.2.2",
-    "zone.js": "^0.8.0"
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.1",
-    "@angular/compiler-cli": "^2.4.9",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.45",
-    "@types/lodash": "4.14.55",
-    "@types/node": "^7.0.8",
-    "codelyzer": "^3.0.0-beta.3",
+    "@types/jasmine": "^2.5.46",
+    "@types/lodash": "4.14.58",
+    "@types/node": "^7.0.11",
+    "codelyzer": "^3.0.0-beta.4",
     "concurrently": "^3.4.0",
     "firebase-tools": "^3.5.0",
     "jasmine-core": "^2.5.2",
@@ -51,12 +51,12 @@
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.3.0",
+    "karma-coverage-istanbul-reporter": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "protractor": "~5.1.1",
     "pug": "2.0.0-beta11",
     "pug-cli": "^1.0.0-alpha6",
-    "ts-node": "~2.1.0",
+    "ts-node": "~3.0.2",
     "tslint": "~4.5.1",
     "typescript": "~2.2.1"
   }
