fix package name and version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fundabitat",
-  "version": "0.5.0",
+  "name": "hilarity-cards",
+  "version": "0.1.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
