--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,14 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
+    "target": "es5",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2016", "dom"],
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noUnusedLocal": true,
-    "noUnusedParameters": true,
+    "noUnusedLocal": false,
+    "noUnusedParameters": false,
     "strictNullChecks": false
   }
 }
