--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/animations": "^4.0.1",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
     "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
+    "@angular/forms": "^4.0.1",
+    "@angular/http": "^4.0.1",
     "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/router": "^4.0.1",
     "angularfire2": "2.0.0-beta.8",
     "core-js": "^2.4.1",
-    "firebase": "^3.7.3",
+    "firebase": "^3.7.4",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
-    "rxjs": "^5.2.0",
+    "rxjs": "^5.2.1-smooth",
     "ts-helpers": "^1.1.2",
     "web-animations-js": "^2.2.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.1",
     "@types/hammerjs": "^2.0.34",
-    "@types/jasmine": "^2.5.46",
-    "@types/lodash": "4.14.58",
-    "@types/node": "^7.0.11",
+    "@types/jasmine": "^2.5.47",
+    "@types/lodash": "4.14.61",
+    "@types/node": "^7.0.12",
     "codelyzer": "^3.0.0-beta.4",
     "concurrently": "^3.4.0",
     "firebase-tools": "^3.5.0",
@@ -58,7 +58,7 @@
     "pug": "2.0.0-beta11",
     "pug-cli": "^1.0.0-alpha6",
     "ts-node": "~3.0.2",
-    "tslint": "~4.5.1",
-    "typescript": "~2.2.1"
+    "tslint": "~5.0.0",
+    "typescript": "~2.2.2"
   }
 }
