--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,11 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "@google-cloud/debug-agent": "^1.0.0",
+    "firebase": "^3.7.4",
     "firebase-admin": "^4.1.2",
-    "firebase-functions": "^0.5"
+    "firebase-functions": "^0.5",
+    "lodash": "^4.17.4"
   },
   "private": true
 }
