--- a/package.json
+++ b/package.json
@@ -13,52 +13,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
+    "@angular/animations": "^4.1.1",
+    "@angular/common": "^4.1.1",
+    "@angular/compiler": "^4.1.1",
+    "@angular/core": "^4.1.1",
     "@angular/flex-layout": "2.0.0-rc.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/material": "2.0.0-beta.2",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "angularfire2": "2.0.0-beta.8",
+    "@angular/forms": "^4.1.1",
+    "@angular/http": "^4.1.1",
+    "@angular/material": "2.0.0-beta.3",
+    "@angular/platform-browser": "^4.1.1",
+    "@angular/platform-browser-dynamic": "^4.1.1",
+    "@angular/router": "^4.1.1",
+    "angularfire2": "4.0.0-rc.0",
     "core-js": "^2.4.1",
-    "firebase": "^3.7.4",
+    "firebase": "^3.9.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
     "lodash": "^4.17.4",
-    "rxjs": "^5.2.1-smooth",
+    "rxjs": "^5.3.1",
     "ts-helpers": "^1.1.2",
-    "web-animations-js": "^2.2.2",
-    "zone.js": "^0.8.5"
+    "web-animations-js": "^2.2.5",
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.1",
+    "@angular/cli": "1.0.2",
+    "@angular/compiler-cli": "^4.1.1",
     "@types/hammerjs": "^2.0.34",
     "@types/jasmine": "^2.5.47",
-    "@types/lodash": "4.14.61",
-    "@types/node": "^7.0.12",
-    "codelyzer": "^3.0.0-beta.4",
+    "@types/lodash": "4.14.64",
+    "@types/node": "^7.0.18",
+    "codelyzer": "^3.0.1",
     "concurrently": "^3.4.0",
-    "firebase-tools": "^3.5.0",
-    "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.5.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "firebase-tools": "^3.7.0",
+    "jasmine-core": "^2.6.1",
+    "jasmine-spec-reporter": "^4.1.0",
+    "karma": "^1.6.0",
+    "karma-chrome-launcher": "^2.1.1",
     "karma-cli": "~1.0.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.0.0",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-phantomjs-launcher": "^1.0.4",
     "protractor": "~5.1.1",
-    "pug": "2.0.0-beta11",
+    "pug": "2.0.0-rc.1",
     "pug-cli": "^1.0.0-alpha6",
-    "ts-node": "~3.0.2",
-    "tslint": "~5.0.0",
-    "typescript": "~2.2.2"
+    "ts-node": "~3.0.4",
+    "tslint": "~5.2.0",
+    "typescript": "~2.3.2"
   }
 }
